# T-ELF

./: .gitignore  CITATION.cff  LICENSE  Publications.md  README.md  environment_cpu.yml  environment_gpu.yml  post_install.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci_tests.yml
TELF/: __init__.py  version.py
TELF/applications/: __init__.py
TELF/factorization/: HNMFk.py  NMFk.py  RESCALk.py  SPLIT.py  (+4 more)
data/: acronyms_documents.p  documents.p  dog.npz  sample.csv  sample2.csv  sample_doi.csv  sample_index.p  split_transfer_synthetic_data.p  stop_phrases.py  stop_words.txt  swimmer.mat  wtsi.mat
docs/: ArcticFox.html  Beaver.html  Bunny.html  Cheetah.html  Fox.html  HNMFk.html  NMFk.html  Orca.html  Penguin.html  RESCALk.html  SPLIT.html  SPLITTransfer.html  SeaLion.html  Squirrel.html  SymNMFk.html  TELF.factorization.decompositions.html  TELF.factorization.decompositions.utilities.html  TELF.factorization.html  TELF.factorization.utilities.html  TELF.html  TELF.pre_processing.Beaver.html  TELF.pre_processing.Vulture.html  TELF.pre_processing.Vulture.tokens_analysis.html  TELF.pre_processing.html  TriNMFk.html  Vulture.html  Wolf.html  genindex.html  iPenguin.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: README.md
scripts/: data_generator_rescal.py  error_calculations.py  generate_X.py  generate_boolean_X.py  sample_with_mask.py  update_versioning.ipynb
tests/: test_clustering.py  test_math_utils.py  test_nmf_fro_admm.py  test_nmf_fro_mu.py  test_nmf_kl_admm.py  test_nmf_kl_mu.py  test_nmfk_factors.py  test_nnsvd.py  test_resample.py  test_rescal_fro_mu.py  test_unfolding.py  test_wtsi.py
(+698 files in other folders)
