[tool.poetry]
name = "TELF"
version = "0.0.39"
description = "T-ELF is one of the machine learning software packages developed as part of the R&D 100 winning SmartTensors AI project at Los Alamos National Laboratory (LANL). T-ELF presents an array of customizable software solutions crafted for analysis of datasets. Acting as a comprehensive toolbox, T-ELF specializes in data pre-processing, extraction of latent features, and structuring results to facilitate informed decision-making. Leveraging high-performance computing and cutting-edge GPU architectures, our toolbox is optimized for analyzing large datasets from diverse set of problems."
authors = ["Maksim E. Eren"]
license = "BST-3"
readme = "README.md"

# Explicitly tell Poetry where to find the Python package
packages = [
    { include = "TELF" }
]

[tool.poetry.dependencies]
python = "3.11.10"
numpy = "<=2.0.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pathos = "^0.3.3"
psutil = "^6.0.0"
treelib = "^1.7.0"
tqdm = "^4.66.5"
gputil = "^1.4.0"
pytest = "^8.3.3"
scikit-learn = "^1.5.2"
sparse = "^0.15.4"
h5py = "^3.12.1"
pandas = "^2.2.3"
nltk = "^3.9.1"
joblib = "^1.4.2"
networkx = "^3.4.1"
spacy = "^3.8.2"
mat73 = "^0.65"
spacy-transformers = "^1.3.5"
rapidfuzz = "^3.10.0"
plotly = "^6.0.0"
wordcloud = "^1.9.4"
httpx = "^0.28.1"
xmltodict = "^0.14.2"
rbloom = "^1.5.2"
pymongo = "^4.11.2"
seaborn = "^0.13.2"
umap-learn = "^0.5.7"
torch = "^2.6.0"
transformers = "^4.39.3"
langchain-ollama = "^0.3.0"
openai = "^1.69.0"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
